jsoup changelog

*** Release 1.8.2 [PENDING]
 * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
   speed increase. For non-Android JREs, around 1.1x to 1.2x.

 * File upload support. Added the ability to specify input streams for POST data, which will upload content in
   MIME multipart/form-data encoding.

 * Added ability to disable TLS (SSL) certificate validation. Helpful if you're hitting a host with a bad cert,
   or your JDK doesn't support SNI.
   <https://github.com/jhy/jsoup/pull/343>

 * Added ability to further tweak the canned Cleaner Whitelists by removing existing settings.
   <https://github.com/jhy/jsoup/pull/449>

 * Added option in Cleaner Whitelist to allow linking to in-page anchors (#)
   <https://github.com/jhy/jsoup/pull/441>

 * Use a lowercase doctype tag for HTML5 documents.

 * Add support for 201 Created with redirect, and other status codes. Treats any HTTP status code 2xx or 3xx as an OK
   response, and follow redirects whenever there is a Location header.
   <https://github.com/jhy/jsoup/issues/312>

 * Added support for HTTP method verbs PUT, DELETE, and PATCH.

 * Added support for overriding the default POST character of UTF-8
   <https://github.com/jhy/jsoup/pull/491>

 * W3C DOM support: added ability to convert from a jsoup document to a W3C document, with the W3Dom helper class.

 * In the HtmlToPlainText example program, added the ability to filter using a CSS selector. Also clarified
   the usage documentation.

 * Fixed validation of cookie names in HttpConnection cookie methods.
   <https://github.com/jhy/jsoup/pull/377>

 * Fixed an issue where <option> tags would be missed when preparing a form for submission if missing a selected
   attribute.

 * Fixed an issue where submitting a form would incorrectly include radio and checkbox values without the checked
   attribute.
