@@ -4,6 +4,10 @@ jsoup changelog
  * Performance improvements for parsing HTML on Android, of 1.5x to 1.9x, with larger parses getting a bigger
    speed increase. For non-Android JREs, around 1.1x to 1.2x.
 
+ * Dramatic performance improvement in HTML serialization on Android (KitKat and later), of 115x. Improvement by working
+   around a character set encoding speed regression in Android.
+   <https://github.com/jhy/jsoup/issues/383>
+
  * File upload support. Added the ability to specify input streams for POST data, which will upload content in
    MIME multipart/form-data encoding.
 
